--- a/styles.css
+++ b/styles.css
@@ -25,31 +25,36 @@
   font-weight: normal;
   font-style: italic;
 }
-
+*{
+ padding: 0;
+  margin: 0;
+}
 body {
   background-image: url("./img/fondo-asus.gif");
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
+  font-family: "Montserrat-Bold";
+}
+#mainContainer {
   display: flex;
   justify-content: center;
   align-content: center;
-  align-items: center;
-  font-family: "Montserrat-Bold";
-  margin-bottom: 5%;
-}
+  width: 100%;
+  height: 50vh;
 
+}
 .container {
   background-color: rgba(255, 255, 255, 0.842);
   width: 50%;
   border-radius: 15px;
-  margin: 0 auto;
-  height: auto;
   display: flex;
   justify-content: center;
   align-content: center;
   align-items: center;
   padding: 1%;
   box-sizing: border-box;
+  position: relative;
+  top: 50%;
 }
 
 .main {
